<resources>
    <string name="app_name">Nomm</string>
    <string name="recipes">Recipes</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="header_title">Header title</string>
    <string name="header_text">Header text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="secondary_text">secondary_text</string>
    <string name="supporting_text">supporting_text</string>
</resources>
