<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="dev.mellissa.nomm.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/recipesFragment"
        android:name="dev.mellissa.nomm.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="dev.mellissa.nomm.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

</navigation>
